# rust-email-newsletter-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
docker/db/: init_db.sh
migrations/: 20221005194612_create_subscription_tokens_table.sql
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  error_handling.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/configuration/: environment.rs  loader.rs  mod.rs  settings.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscription.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: login.html  mod.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
